# twine

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
examples/: arrays.tw  bubble.tw  fibonacci.tw  fizzbuzz.tw  functions.tw  math.tw  monte.tw  random.tw  recursion.tw  sieve.tw  string.tw  temperature.tw
include/: ast.h  codegen.h  lexer.h  parser.h
src/: ast.cpp  codegen.cpp  lexer.cpp  main.cpp  parser.cpp
